--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,20 @@ version: '3'
 
 services:
   django:
-    container_name: django_server
+    # container_name: django_server
     build:
       context: .
-      dockerfile: ./docker_compose/docker/Dockerfile
+      dockerfile: docker_compose/docker/Dockerfile
     # command: /start.sh
     ports:
       - 8000:8000
     command: gunicorn -w 4 quiz.wsgi -b 0.0.0.0:8000
 
   nginx:
-    container_name: nginx_server
+    # container_name: nginx_server
     build:
       context: .
-      dockerfile: ./docker_compose/nginx/Dockerfile
+      dockerfile: docker_compose/nginx/Dockerfile
     depends_on:
       - django
     ports:
